--- a/st/index.html
+++ b/st/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>Seth's Test</title>
+    <title>Web Designer Test</title>
 
     <link href="test.css" rel='stylesheet' type='text/css'>
     
