--- a/st/index.html
+++ b/st/index.html
@@ -26,7 +26,7 @@
                 <div id="logo"><img src="http://morphemes.net/logo_small_white.png">
                 </div>
                 <div id="title">
-                    <h1>Web Designer Test for Sharethrough</h1>
+                    <h1>Omnis Voluptas Assumenda Est</h1>
                 </div>
                 <div class="nav">
                     <ul>
